              + PacketClass (defined in concepts/packet.h)
              + ArrayOf, ConstRefArrayOf (defined in concepts/array.h)
              + BanConstraint, LPConstraint, LPSubspace (defined in
                enumerate/treelp.h)
              + IsoSigEncoding (defined in triangulation/isosigencoding.h)
              + IsoSigType (defined in triangulation/isosigtype.h)
    PYTHON:
        - Removed the bindings TreeEnumeration_EulerPositive..., since the
          linear constraint LPConstraintEulerPositive was never meant to be
          used with TreeEnumeration (since the constraint does not map out a
          linear subspace).
    UTILITIES:
        trisetcmp:
            - Now finds matches (or non-matches) in any dimension, not just
              dimensions 3 and 4.

Version 7.4.1  [ 30 November, 2025 ]

    GENERAL:
        - Now builds under clang 16 and on macOS 26.
        - For systems that go out of their way to explicitly disable linking
          against graphviz plugins (e.g., openSUSE Leap 16), you can now work
          around this by passing the cmake flag -DGRAPHVIZ_DYNAMIC_PLUGINS=1 .
    ENGINE:
        Class BoundaryComponent<dim>:
            - Fixed an important bug in build() for real boundary components,
              which gave inconsistencies in the labelling of lower-dimensional
              faces.  See: https://regina-normal.github.io/bugs.html#bcbuild
        Class Face<dim, subdim>
            - Now isLinkOrientable() will compute the orientability of the link
              correctly even for invalid faces with bad self-identifications.
    PYTHON:
        - Added missing Python bindings for Triangulation<dim>::simplices()
          for dimension dim ≥ 5.
    UTILITIES:
        - Fixed a bug in Katie's quadricolour search routine, which would cause
          a segfault when attempting to build a triangulation of a 0-framed
          unknot from certain single-crossing diagrams.
